# CesarArroyo09.github.io

./: .gitignore  Makefile  README.md  archives.html  authors.html  categories.html  index.html  my-first-post.html  my-first-review.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
author/: cesar-arroyo.html
category/: general.html  review.html
content/: my-first-post.md
content/pages/: about.md  portfolio.md
feeds/: all.atom.xml  cesar-arroyo.atom.xml  cesar-arroyo.rss.xml  general.atom.xml  review.atom.xml
pages/: about.html  portfolio.html
tag/: first-post.html
