[project]
name = "cesar-arroyo-pw"
version = "0.1.0"
description = "My personal static website"
authors = [
    {name = "Cesar Arroyo",email = "cesararroyocardenas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pelican[markdown] (>=4.11.0,<5.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
